# when testing compile speed is the most important
[profile.test]
opt-level = 0

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy) which do not change often
# but not for our code which takes longer to rebuild:
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.0.9-dev.6"
authors = ["Pete Hayman"]
edition = "2024"
description = "A personal application framework"
documentation = "https://docs.rs/beet"
readme = "README.md"
homepage = "https://beetstack.dev"
repository = "https://github.com/mrchantey/beet"
license = "MIT OR Apache-2.0"
keywords = ["malleable-software", "local-first", "cross-platform", "framework", "robotics"]
categories = [
	"science::robotics",
	"game-development",
	"simulation",
	"wasm",
	"embedded",
]
publish = false

[workspace]
# default resolver
resolver = "2"

exclude = [
	"infra",
	"crates/beet_build/tests/pipeline_test_crate",
	"bevy"
]

members = [

	## 💡 Core
	"crates/beet_core",
	"crates/beet_core/macros",
	"crates/beet_core/shared",
	"crates/beet_net",
	"crates/beet_tool",
	"crates/beet_node",
	"crates/beet_stack",
	"crates/beet_router",
	"crates/beet_clanker",

	## 💡 Flow
	# "crates/beet_examples",
	# "crates/beet_flow",
	# "crates/beet_ml",
	# "crates/beet_spatial",

	## 💡 RSX
	# "crates/beet_build",
	# "crates/beet_design",
	# "crates/beet_dom",
	# "crates/beet_parse",
	# "crates/beet_router",
	# "crates/beet_rsx_combinator",
	# "crates/beet_rsx/macros",
	# "crates/beet_rsx",

	## 💡 Beet
	# "crates/beet_site",
	# "crates/beet-cli",
]

[workspace.dependencies]
## internal

beet = { path = "", version = "0.0.9-dev.6" }
beet_clanker = { path = "crates/beet_clanker", version = "0.0.9-dev.6" }
beet_core_macros = { path = "crates/beet_core/macros", version = "0.0.9-dev.6" }
beet_core_shared = { path = "crates/beet_core/shared", version = "0.0.9-dev.6" }
beet_core = { path = "crates/beet_core", version = "0.0.9-dev.6" }
beet_net = { path = "crates/beet_net", version = "0.0.9-dev.6" }
beet_tool = { path = "crates/beet_tool", version = "0.0.9-dev.6" }
beet_node = { path = "crates/beet_node", version = "0.0.9-dev.6" }
beet_router = { path = "crates/beet_router", version = "0.0.9-dev.6" }
beet_stack = { path = "crates/beet_stack", version = "0.0.9-dev.6" }

# beet_flow = { path = "crates/beet_flow", version = "0.0.9-dev.6" }
# beet_spatial = { path = "crates/beet_spatial", version = "0.0.9-dev.6" }
# beet_ml = { path = "crates/beet_ml", version = "0.0.9-dev.6" }
# beet_examples = { path = "crates/beet_examples", version = "0.0.9-dev.6" }

# beet_rsx_combinator = { path = "crates/beet_rsx_combinator", version = "0.0.9-dev.6" }
# beet_parse = { path = "crates/beet_parse", version = "0.0.9-dev.6" }
# beet_rsx_macros = { path = "crates/beet_rsx/macros", version = "0.0.9-dev.6" }
# beet_rsx = { path = "crates/beet_rsx", version = "0.0.9-dev.6" }
# beet_build = { path = "crates/beet_build", version = "0.0.9-dev.6" }
# beet_design = { path = "crates/beet_design", version = "0.0.9-dev.6" }
# beet_router = { path = "crates/beet_router", version = "0.0.9-dev.6" }
# beet_dom = { path = "crates/beet_dom", version = "0.0.9-dev.6" }

#💡 local
bevy = { version = "0.18", default-features = false, features = [
	"std", # std for reflect PathBuf
	"debug",
	"bevy_log",
	"bevy_color",
	# bug, required cos bevy not compiling when beet_router includes this
	# TODO remove after sweet local observers
	"reflect_documentation",
	# bevy recommends not to do this in libraries but beet_core --all-features wont compile without it
	# even if feature forced on, not sure why
	"reflect_auto_register",
	# for most oneshot apps multi-threaded coldstart is much slower than
	# any potential performance gain, even more prominent for linear pipelines
	# "multi_threaded",
	# doesnt seem accurate, lists despawn location as spawn location
	# "track_location",
	"keyboard",
] }

#💡 utility
thiserror = "1"
heck = "0.4"
glob = "0.3"
dotenv = "0.15"
send_wrapper = "0.6"
web-time = "1"
itertools = "0.14"
uuid = {version = "1",features=["js"]}
chrono = "0.4"
rand = "0.9"
rand_chacha = "0.9"
# wasm_js ignored in native
getrandom = { version = "0.3", features = ["wasm_js"] }
variadics_please = "1"
webbrowser = "1"

#💡 logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nu-ansi-term = "0.50"
pretty_env_logger = "0.4"


#💡 async
futures = "0.3"
futures-lite = { version = "2", default-features = false, features = ["alloc"] }
pin-project = "1"
async-channel = "2"
async-executor = "1"
async-fs = "2"
async-io = "2"
async-lock = "3"
async-process = "2"
async-task = "4"

#💡 macros

syn = { version = "2", features = [
	"extra-traits",
	"visit",
	# full for syn::pat
	"full",
] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
proc-macro2-diagnostics = "0.10"
prettyplease = "0.2"

#💡 attributes
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
extend = "1"

#💡 io
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
base64 = "0.22"
ron = "0.8"
toml = "0.8"
bytes = "1"

#💡 http
http = "1"
http-body-util = "0.1"
url = "2"

#💡 tui
bevy_ratatui = { version = "0.11", default-features=false }
# bevy_ratatui = { git = "https://github.com/ratatui/bevy_ratatui", branch = "main" }
ratatui = { version = "0.30", default-features = false }

#💡 web
js-sys = "0.3"
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# https://github.com/wasm-bindgen/wasm-bindgen/blob/215b914c739c598e5c076f8ed22df20d2c77a3dd/crates/web-sys/Cargo.toml#L45
web-sys = "0.3"

[package]
name = "beet"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

include = ["CHANGELOG.md", "README.md", "/src", "/examples", "/scenes"]

[features]
# default = ["stack"]
default = ["node"]

# 💡 Top Level

http_server = ["net", "tool","stack", "beet_net/server"]
tui_server = ["tui","stack", "markdown"]
stdio_server = ["stack", "markdown"]

# 💡 Core

serde = ["beet_core/serde", "beet_net?/serde"]
nightly = ["beet_core/nightly"]
rand = ["beet_core/rand"]
json = ["serde", "beet_core/json", "beet_net?/json"]
postcard = ["serde", "beet_core/postcard", "beet_net?/postcard"]
testing = ["beet_core/testing"]
fs = ["beet_core/fs","beet_net?/fs"]
bevy_scene = ["beet_core/bevy_scene"]
bevy_default = [
	"bevy/default",
	"beet_core/bevy_default"
]

# 💡 Net

net = ["dep:beet_net", "beet_stack?/http"]
native-tls = [
"net", "beet_net/native-tls",
]
router = ["dep:beet_router"]
rustls-tls = [
"net", "beet_net/rustls-tls",
]
lambda = ["rustls-tls", "beet_net?/lambda"]
aws = ["net", "beet_net?/aws"]
tungstenite = ["net", "beet_net?/tungstenite"]
ureq = ["net", "beet_net?/ureq"]
reqwest = ["net", "beet_net?/reqwest"]
hyper = ["net", "beet_net?/hyper"]
_pretty_curl = ["net", "node", "ureq", "native-tls"]
_mini_browser = ["_pretty_curl", "tui"]


clanker = ["dep:beet_clanker","net","tool"]
# dom = ["css", "dep:beet_dom"]


# 💡 Stack

tool = ["dep:beet_tool"]
node = ["dep:beet_node"]
stack = ["tool", "dep:beet_stack"]
tui = ["beet_node?/tui"]
markdown = ["beet_stack?/markdown"]

# examples = ["bevy_default", "spatial", "dep:beet_examples"]
# flow = ["dep:beet_flow"]
# css = ["beet_parse?/css", "beet_rsx?/css"]
# design = ["rsx", "dep:beet_design"]
# webdriver = ["dom","beet_dom?/webdriver"]
# parse = ["dep:beet_parse"]
# rsx = ["dep:beet_rsx"]
# ml = ["flow", "dep:beet_ml", "beet_examples?/ml"]
# cuda = ["ml","beet_ml/cuda"]
# 💡 Server

# spatial = ["flow", "dep:beet_spatial", "beet_ml?/spatial"]
# build = ["parse", "dep:beet_build"]
# bevy_scene = ["beet_core/bevy_scene"]
# bevy_default = [
# 	"bevy/default",
# 	"beet_core/bevy_default",
	# "beet_dom/bevy_scene",
	# "beet_dom/bevy_text",
	# "beet_examples?/bevy_default",
	# "beet_flow?/bevy_default",
	# "beet_ml?/bevy_default",
	# "beet_spatial?/bevy_default",
# ]

# animation = ["beet_spatial?/animation"]
# assets = ["beet_spatial?/assets"]
# ui = ["beet_spatial?/ui"]
# reflect = ["beet_flow/reflect"]
# dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { workspace = true }

beet_core.workspace = true
beet_clanker = { workspace = true, optional = true }
beet_net = { workspace = true, optional = true }
beet_node = { workspace = true, optional = true }
beet_router = { workspace = true, optional = true }
beet_tool = { workspace = true, optional = true }
beet_stack = { workspace = true, optional = true }

#💡 web
# beet_dom = { workspace = true, optional = true }
# beet_parse = { workspace = true, optional = true }
# beet_rsx = { workspace = true, optional = true }
# beet_build = { workspace = true, optional = true }
# beet_design = { workspace = true, optional = true }

#💡 flow
# beet_flow = { workspace = true, optional = true }
# beet_ml = { workspace = true, optional = true }
# beet_spatial = { workspace = true, optional = true }

# beet_examples = { workspace = true, optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
# required for rand 0.9 to compile on wasm targets
uuid = { workspace = true, features = ["rng-getrandom"] }

[dev-dependencies]
# beet = { path = ".", features = ["flow"] }
# beet = { path = "", features = ["launch", "server_app", "client", "rand"] }
# bevy.workspace = true
# bevy = { workspace = true, default_features = true }
serde.workspace = true
serde_json.workspace = true
async-executor.workspace = true
futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
beet = { path = ".", features = ["fs"] }


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook.workspace = true
web-sys.workspace = true
# js-sys.workspace = true
# wasm-bindgen.workspace = true
# wasm-bindgen-futures.workspace = true

# 💡 Examples - Net

[[example]]
name = "http_client"
path = "examples/net/http_client.rs"
required-features = ["net", "ureq", "native-tls"]

[[example]]
name = "http_server"
path = "examples/net/http_server.rs"
required-features = ["http_server"]

[[example]]
name = "socket_client"
path = "examples/net/socket_client.rs"
required-features = ["tungstenite"]

[[example]]
name = "socket_server"
path = "examples/net/socket_server.rs"
required-features = ["tungstenite"]

[[example]]
name = "templating"
path = "examples/net/templating.rs"
required-features = ["http_server"]

# 💡 Examples - Node

[[example]]
name = "media_renderer"
path = "examples/node/media_renderer.rs"
required-features = ["node"]

[[example]]
name = "pretty_curl"
path = "examples/node/pretty_curl.rs"
required-features = ["_pretty_curl"]

[[example]]
name = "mini_browser"
path = "examples/node/mini_browser.rs"
required-features = ["_mini_browser"]


# 💡 Examples - Stack

[[example]]
name = "tui"
path = "examples/stack/tui.rs"
required-features = ["tui_server"]

[[example]]
name = "cli"
path = "examples/stack/cli.rs"
required-features = ["stdio_server"]

[[example]]
name = "repl"
path = "examples/stack/repl.rs"
required-features = ["stdio_server"]

[[example]]
name = "http"
path = "examples/stack/http.rs"
required-features = ["http_server"]

# 💡 Examples - Clanker

[[example]]
name = "chat"
path = "examples/clanker/chat.rs"
required-features = ["clanker"]


# 💡 Examples - flow

# [[example]]
# name = "hello_world"
# path = "examples/flow/hello_world.rs"
# required-features = ["flow"]

# [[example]]
# name = "long_running"
# path = "examples/flow/long_running.rs"
# required-features = ["flow"]

# [[example]]
# name = "malenia"
# path = "examples/flow/malenia.rs"
# required-features = ["flow", "rand"]

# [[example]]
# name = "repeat_while"
# path = "examples/flow/repeat_while.rs"
# required-features = ["flow"]

# [[example]]
# name = "simple_action"
# path = "examples/flow/simple_action.rs"
# required-features = ["flow"]

# [[example]]
# name = "state_machine"
# path = "examples/flow/state_machine.rs"
# required-features = ["flow"]

# [[example]]
# name = "utility_ai"
# path = "examples/flow/utility_ai.rs"
# required-features = ["flow"]

# 💡 Examples - Router

# [[example]]
# name = "http_router"
# path = "examples/router/http_router.rs"
# required-features = ["server_app"]

# [[example]]
# name = "app_ml"
# path = "examples/app_ml.rs"

# [[example]]
# name = "app"
# path = "examples/app.rs"

# [[example]]
# name = "fetch"
# path = "examples/ml/fetch.rs"
# required-features = ["examples", "ml"]

# [[example]]
# name = "frozen_lake_train"
# path = "examples/ml/frozen_lake_train.rs"
# required-features = ["examples", "ml"]

# [[example]]
# name = "frozen_lake_run"
# path = "examples/ml/frozen_lake_run.rs"
# required-features = ["examples", "ml"]

# [[example]]
# name = "hello_ml_chat"
# path = "examples/ml/hello_ml_chat.rs"
# required-features = ["examples", "ml"]

# [[example]]
# name = "hello_ml"
# path = "examples/ml/hello_ml.rs"
# required-features = ["examples", "ml"]

# [[package.metadata.scene]]
# name = "hello-ml"
# description = "A behavior that uses a Sentence Selector to score child behaviors, deciding which will run next."
# thumb-url = "https://bevyhub-public.s3.us-west-2.amazonaws.com/assets/screenshots/hello-llm.png"
# path = "scenes/hello-ml.json"
# include = ["bevyhub/camera-2d", "bevyhub/ui-terminal", "beet-debug"]

# 💡 Examples - Spatial

# [[example]]
# name = "flock"
# path = "examples/spatial/flock.rs"
# required-features = ["examples", "spatial"]

# Too big, we need to handle for loops in scene files
# [[package.metadata.scene]]
# name = "flock"
# description = "Demonstration of flocking behaviors."
# thumb-url = "https://bevyhub-public.s3.us-west-2.amazonaws.com/assets/screenshots/flock.png"
# app = "app"
# path = "scenes/flock.json"
# include = ["beet-debug", "bevyhub/camera-2d", "bevyhub/space-scene"]

# [[example]]
# name = "hello_animation"
# path = "examples/spatial/hello_animation.rs"
# required-features = ["examples", "spatial"]

# [[package.metadata.scene]]
# name = "hello-animation"
# description = "A simple behavior demonstrating animation control."
# thumb-url = "https://bevyhub-public.s3.us-west-2.amazonaws.com/assets/screenshots/hello-animation.png"
# app = "app"
# path = "scenes/hello-animation.json"
# include = [
# 	"bevyhub/ui-terminal",
# 	"bevyhub/lighting-3d",
# 	"bevyhub/ground-3d",
# 	"beet-debug",
# ]

# [[example]]
# name = "inverse_kinematics"
# path = "examples/spatial/inverse_kinematics.rs"
# required-features = ["examples", "spatial"]

# [[example]]
# name = "seek"
# path = "examples/spatial/seek.rs"
# required-features = ["examples", "spatial"]

# [[example]]
# name = "seek_3d"
# path = "examples/spatial/seek_3d.rs"
# required-features = ["examples", "spatial"]

# [[package.metadata.scene]]
# name = "seek"
# description = "Demonstration of the seek behavior."
# thumb-url = "https://bevyhub-public.s3.us-west-2.amazonaws.com/assets/screenshots/seek.png"
# app = "app"
# path = "scenes/seek.json"
# include = ["beet-debug", "bevyhub/camera-2d", "bevyhub/space-scene"]

# [[package.metadata.scene]]
# name = "seek-3d"
# description = "A 3D demonstration of the seek behavior."
# thumb-url = "https://bevyhub-public.s3.us-west-2.amazonaws.com/assets/screenshots/seek-3d.png"
# app = "app"
# path = "scenes/seek-3d.json"
# include = ["beet-debug", "bevyhub/lighting-3d", "bevyhub/ground-3d"]

# 💡 Benches

[[bench]]
name = "bevy_coldstart"
path = "tests/benches/bevy_coldstart.rs"
harness = false

[[bench]]
name = "assert"
path = "tests/benches/assert.rs"
harness = false

[[bench]]
name = "control_flow_patterns"
path = "tests/benches/control_flow_patterns.rs"
harness = false

[[bench]]
name = "entity_spawn"
path = "tests/benches/entity_spawn.rs"
harness = false

[[bench]]
name = "server_bench"
path = "tests/benches/beet_net/server_bench.rs"
harness = false
required-features = ["server_app"]

# [[bench]]
# name = "router_bench"
# path = "tests/benches/beet_router/router_bench.rs"
# harness = false
# required-features = ["server_app"]

[[bench]]
name = "bench_observer_global"
path = "tests/benches/bench_observer_global.rs"
harness = false

[[bench]]
name = "bench_observer_local"
path = "tests/benches/bench_observer_local.rs"
harness = false
